--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,20 +19,6 @@
 ; SobiPro 1.1
 ;=========
 
-SP.CPANEL_SYSTEM_STATUS="System Status"
-SP.CPANEL_POPULAR_ENTRIES="Popular Entries"
-SP.CPANEL_NEW_ENTRIES="New Entries"
-SP.CPANEL_EXPIRING_SOON="Expiring soon"
-SP.CPANEL_AWAITING_APPROVAL="Awaiting approval"
-SP.CPANEL_REPORTED_ISSUES="%d reported issues"
-SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
-SP.CLOSE="Close"
-SP.CLOSE_X="x"
-SP.CPANEL_ISSUES_TYPE="Level"
-SP.CPANEL_ISSUES_SECTION="Affected Section"
-SP.CPANEL_ISSUES_MESSAGE="Message"
-
-
 SP.ENTRY.HEADER_COUNTER="Counter"
 SP.ENTRY.HEADER_SECTION="Section"
 SP.ENTRY.HEADER_CREATED_AT="Created at"
@@ -53,6 +39,8 @@ SP.ONOFF_YES="On"
 SP.ONOFF_NO="Off"
 SP.PN.GO="Go!"
 SP.LISTING_LIMIT="Page Limit"
+SP.CLOSE="Close"
+SP.CLOSE_X="×"
 
 ; Toolbar
 SP.TB.SAVE_ONLY="Save"
@@ -80,6 +68,18 @@ SP.TB.CONTROL_PANEL="Control Panel"
 SP.TB.GLOBAL_CONFIG="System Settings"
 SP.TB.ACL="Access Control List"
 SP.TB.SAM="Application Manager"
+
+; CPanel
+SP.CPANEL_SYSTEM_STATUS="SobiPro System Status"
+SP.CPANEL_POPULAR_ENTRIES="Popular Entries"
+SP.CPANEL_NEW_ENTRIES="New Entries"
+SP.CPANEL_EXPIRING_SOON="Expiring soon"
+SP.CPANEL_AWAITING_APPROVAL="Awaiting approval"
+SP.CPANEL_REPORTED_ISSUES="%d reported issues"
+SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
+SP.CPANEL_ISSUES_TYPE="Level"
+SP.CPANEL_ISSUES_SECTION="Affected Section"
+SP.CPANEL_ISSUES_MESSAGE="Message"
 
 ; Fields Manager
 SP.HEADER_FIELD_NAME="Field Name"
@@ -365,8 +365,6 @@ SP.GBN.CFG.DEB_XML_RAW="Raw XML Output"
 SP.GBN.CFG.DEB_XML_IP="Limit to IP"
 SP.GBN.CFG.DEB_LEVEL="Reporting Level"
 SP.GBN.CFG.DEB_DISPLAY_ERRORS="Display Errors on Screen"
-;; not used anymore - split
-;;SP.GBN.CFG.INCLUDE_FILES_CACHE="Javascript & CSS Files"
 SP.GBN.CFG.INCLUDE_JS_FILES_CACHE="Javascript Files"
 SP.GBN.CFG.INCLUDE_CSS_FILES_CACHE="CSS Files"
 SP.GBN.CFG.COMPRESS_FILES="Compression"
@@ -1342,7 +1340,8 @@ SP.FM.EMAIL_SPEC_PARAMS="Email Specific Parameters"
 ;=========
 SP.TP.EDIT_SITE_TITLE="Edit Template File: var:[path]"
 SP.TP.EDITING_FILE="Editing File: "
-SP.TP.INFO_SITE_TITLE="Template &#34;var:[template]&#34;"
+,
+.TP.INFO_SITE_TITLE="Template &#34;var:[template]&#34;"
 SP.TP.INFO="Template Information"
 SP.TP.TEMPLATE_NAME="Template Name"
 SP.TP.AUTHOR="Author:"
