--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -1,4 +1,4 @@
-; @version: $Id: en-GB.com_sobipro.js.ini 1629 2011-07-12 08:09:32Z Sigrid Suski $
+; @version: $Id: en-GB.com_sobipro.messages.ini 1629 2011-07-12 08:09:32Z Sigrid Suski $
 ; @package: SobiPro Component for Joomla!
 ; ===================================================
 ; @author
@@ -6,26 +6,26 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
 ; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
 ; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
 ; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
 ; ===================================================
 ; $Date: 2011-07-12 10:09:32 +0200 (Tue, 12 Jul 2011) $
 ; $Revision: 1629 $
 ; $Author: Sigrid Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.js.ini $
+; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini $
 
 SP.WARNING.NO_NAME_FIELD_SELECTED="<b>Warning</b>: Please select a name field for this section!"
 SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<b>Warning</b>: Some entries are missing base data. Please check the configuration."
-SP.ACCELERATOR_ENABLED="SobiPro Data Accelerator is enabled"
-SP.ACCELERATOR_DISABLED="SobiPro Data Accelerator is disabled"
-SP.JS_CACHE_ENABLED="JavaScript Cache is enabled"
-SP.JS_CACHE_DISABLED="JavaScript Cache is disabled"
-SP.CSS_CACHE_ENABLED="CSS Cache is enabled"
-SP.CSS_CACHE_DISABLED="CSS Cache is disabled"
-SP.DISPLAY_ERRORS_ENABLED="Errors displaying is disabled"
-SP.DISPLAY_ERRORS_DISABLED="Errors displaying is enabled"
-SP.DEBUG_LEVEL_TOO_HIGH="Debug level is too high for a live site"
-SP.DEBUG_LEVEL_OK="Debug level is correct"
-SP.DEBUG_XML_ENABLED="XML output is enabled"
-SP.DEBUG_XML_DISABLED="XML output is disabled"
+SP.ACCELERATOR_ENABLED="SobiPro Data Accelerator is enabled."
+SP.ACCELERATOR_DISABLED="SobiPro Data Accelerator is disabled."
+SP.JS_CACHE_ENABLED="JavaScript Cache is enabled."
+SP.JS_CACHE_DISABLED="JavaScript Cache is disabled."
+SP.CSS_CACHE_ENABLED="CSS Cache is enabled."
+SP.CSS_CACHE_DISABLED="CSS Cache is disabled."
+SP.DISPLAY_ERRORS_ENABLED="Displaying errors is disabled."
+SP.DISPLAY_ERRORS_DISABLED="Displaying errors is enabled."
+SP.DEBUG_LEVEL_TOO_HIGH="Debug level is too high for a live site."
+SP.DEBUG_LEVEL_OK="Debug level is correct."
+SP.DEBUG_XML_ENABLED="XML output is enabled."
+SP.DEBUG_XML_DISABLED="XML output is disabled."
