--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -17,7 +17,7 @@
 
 SP.ABOUT.ABOUT_PANE="About SobiPro"
 SP.ABOUT.SP_DESC="SobiPro is a Joomla! component with content construction support, which is mainly designed to be used as a directory component."
-SP.ABOUT.DEVELOPED_AND_DESIGNED="Developed and designed by <br/> %s and %s"
+SP.ABOUT.DEVELOPED_AND_DESIGNED="Developed and designed by %s and %s"
 SP.ABOUT.UPDATES_PANE="Version and Updates"
 SP.ABOUT.UD.YOU_ARE_USING="You are currently using SobiPro version <b>%s</b>"
 SP.ABOUT.CREDITS_PANE="Credits"
