--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -24,6 +24,6 @@ SP.ABOUT.CREDITS_PANE="Credits"
 SP.ABOUT.LICENSE_PANE="License Conditions"
 SP.ABOUT.NEWS_PANE="Latest News"
 SP.ABOUT.SP_CLUB="The SobiPro Club"
-SP.ABOUT.SP_CLUB_DESC="If you require support and additional applications for your directory the %s is what you are looking for. For a periodic subscription fee the Club Membership grants you access to the documentation, additional applications/extensions and access to the SobiPro Club forum."
+SP.ABOUT.SP_CLUB_DESC="If you require support and additional applications for your directory the %s is what you are looking for. For a periodic subscription fee the Club Membership grants you access to the documentation, additional applications/extensions and to the SobiPro Club forum."
 SP.ABOUT.SP_CLUB_WEB="%s website"
 SP.ABOUT.SP_FORUM="Sigsiu.NET Club Forum"
