parser - loop w/o table

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1343,7 +1343,7 @@ SP.FM.EMAIL_SPEC_PARAMS="Email Specific Parameters"
 SP.TP.EDIT_SITE_TITLE="Edit Template File: var:[path]"
 SP.TP.EDITING_FILE="Editing File: "
 ,
-.TP.INFO_SITE_TITLE="Template &#34;var:[template]&#34;"
+SP.TP.INFO_SITE_TITLE="Template &#34;var:[template]&#34;"
 SP.TP.INFO="Template Information"
 SP.TP.TEMPLATE_NAME="Template Name"
 SP.TP.AUTHOR="Author:"
