CPanel/4 Template Menu button in all screens

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -70,6 +70,7 @@ SP.TB.CONTROL_PANEL="Control Panel"
 SP.TB.GLOBAL_CONFIG="System Settings"
 SP.TB.ACL="Access Control List"
 SP.TB.SAM="Application Manager"
+SP.TB.TEMPLATE="Template Manager"
 
 ; CPanel
 SP.CPANEL_SYSTEM_STATUS="SobiPro System Status"
@@ -1128,7 +1129,7 @@ SP.AMN.APPS_SECTION_TPL="Section Template"
 SP.AMN.APPS="Applications"
 SP.EX.SECTION="Application Manager"
 SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the &#34;var:[section]&#34; section."
-SP.UPD.UPDATE_AVAILABLE="New version &#34;%s&#34; is available"
+SP.UPD.UPDATE_AVAILABLE="New version %s is available"
 SP.UPD.UP_TO_DATE="Current version is up to date"
 SP.APP.BANK_TRANSFER="Bank Payment"
 SP.APP.PAYPAL="PayPal Payment"
