--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -81,7 +81,7 @@ SP.CPANEL_AWAITING_APPROVAL="Awaiting approval"
 SP.CPANEL_REPORTED_ISSUES="%d reported issues"
 SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
 SP.CPANEL_ISSUES_TYPE="Level"
-SP.CPANEL_ISSUES_SECTION="Affected Section"
+SP.CPANEL_ISSUES_SECTION="Section"
 SP.CPANEL_ISSUES_MESSAGE="Message"
 
 ; Fields Manager
@@ -398,6 +398,8 @@ SP.TP.COPYR="Copyright"
 SP.TP.LIC="License"
 SP.TP.DESC="Description"
 
+; ACL
+SP.ACL_SELECT_RULE_FIRST="Please select rule to delete from the list!"
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
