--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -78,7 +78,7 @@ SP.CPANEL_POPULAR_ENTRIES="Popular Entries"
 SP.CPANEL_NEW_ENTRIES="New Entries"
 SP.CPANEL_EXPIRING_SOON="Expiring soon"
 SP.CPANEL_AWAITING_APPROVAL="Awaiting approval"
-SP.CPANEL_REPORTED_ISSUES="%d reported issues"
+SP.CPANEL_REPORTED_ISSUES="Issues found: %d"
 SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
 SP.CPANEL_ISSUES_TYPE="Level"
 SP.CPANEL_ISSUES_SECTION="Section"
@@ -330,6 +330,8 @@ SP.SECN.CFG.ENTRY_ORDER_BY_UPDATE_DATE_ASC="Least recently modified first"
 SP.SECN.CFG.ENTRY_ORDER_BY_UPDATE_DATE_DESC="Recently modified first"
 SP.SECN.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_ASC="Expires next first"
 SP.SECN.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_DESC="Expires next last"
+SP.SECN.ADD_SECTION_NAME="Name"
+SP.SECN.ADD_SECTION_ALIAS="Alias"
 
 ;;; Alpha Listing
 SP.SECN.CFG.SHOW_ALPHA_MENU="Menu"
@@ -400,6 +402,7 @@ SP.TP.DESC="Description"
 
 ; ACL
 SP.ACL_SELECT_RULE_FIRST="Please select rule to delete from the list!"
+SP.ACL_RULE_DELETED="ACL Rule has been deleted."
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
