ACL - XML template implemented

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,9 @@
 ;=========
 ; SobiPro 1.1
 ;=========
+SP.ACL_PERMISSION_TAB="Permissions"
+SP.ACL_PUBLISHING="Publishing"
+SP.ACL_RULE_SAVED="ACL rule has been saved"
 
 SP.ERR.ERROR_LINE="At Line:"
 
