ACL - XML template implemented

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,7 @@
 SP.ACL_PERMISSION_TAB="Permissions"
 SP.ACL_PUBLISHING="Publishing"
 SP.ACL_RULE_SAVED="ACL rule has been saved"
+SP.EX.NOT_APPLICABLE="Not applicable: This type of extension cannot be disabled"
 
 SP.ERR.ERROR_LINE="At Line:"
 
@@ -1116,7 +1117,6 @@ SP.EX.SSL_SKIP_BT="No, thanks"
 SP.EX.INSTALLED="Installed Applications"
 SP.EX.INSTALL_NEW="Install New Application:"
 SP.EX.INSTALL_NEW_BT="Upload File & Install"
-SP.EX.NOT_APLICABLE="Not applicable/modifiable"
 SP.EX.CORE_PLUGIN="Core Application"
 ; Repositories Manager
 SP.EX.REPO_MANAGER="Repository Manager"
