general layout Errors/2

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,10 +18,6 @@
 ;=========
 ; SobiPro 1.1
 ;=========
-SP.ACL_PERMISSION_TAB="Permissions"
-SP.ACL_PUBLISHING="Publishing"
-SP.ACL_RULE_SAVED="ACL rule has been saved"
-SP.EX.NOT_APPLICABLE="Not applicable: This type of extension cannot be disabled"
 
 SP.ERR.ERROR_LINE="At Line:"
 
@@ -392,6 +388,7 @@ SP.EX.APP_ENABLED="Application \"%s\" has been enabled."
 SP.EX.APP_DISABLED="Application \"%s\" has been disabled."
 SP.EX.HEADER_NAME="Name"
 SP.EX.HEADER_TYPE="Type"
+SP.EX.NOT_APPLICABLE="Not applicable: This type of extension cannot be disabled!"
 
 ; Template
 SP.TP.VER="Version"
@@ -404,9 +401,17 @@ SP.TP.COPYR="Copyright"
 SP.TP.LIC="License"
 SP.TP.DESC="Description"
 
+; Error Log
+SP.ERR.SITE_TITLE="Error Log"
+SP.ERR.VARIABLES="Defined Variables"
+SP.ERR.CALLSTACK="Call Stack"
+
 ; ACL
 SP.ACL_SELECT_RULE_FIRST="Please select rule to delete from the list!"
 SP.ACL_RULE_DELETED="ACL Rule has been deleted."
+SP.ACL_PERMISSION_TAB="Permissions"
+SP.ACL_PUBLISHING="Publishing"
+SP.ACL_RULE_SAVED="ACL rule has been saved"
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
@@ -867,25 +872,25 @@ SP.GB.CFG.DEB_HEAD="Debug and Error Logging Options"
 ;=========
 SP.ERR.SITE_TITLE="Error Log"
 SP.ERR.SITE_HEAD="Error Log"
-SP.ERR.ERROR_DATE="Error Date:"
-SP.ERR.ERROR_LEVEL="Error Level:"
-SP.ERR.RETURN_CODE="Return Code:"
-SP.ERR.ERROR_MESSAGE="Error Message:"
-SP.ERR.IN_FILE="In File:"
-SP.ERR.SECTION_TYPE="Section/Type:"
-SP.ERR.USER_ID="User ID:"
+SP.ERR.ERROR_DATE="Error Date"
+SP.ERR.ERROR_LEVEL="Error Level"
+SP.ERR.RETURN_CODE="Return Code"
+SP.ERR.ERROR_MESSAGE="Error Message"
+SP.ERR.IN_FILE="In File"
+SP.ERR.SECTION_TYPE="Section/Type"
+SP.ERR.USER_ID="User Id"
 SP.ERR.USER_IP="User IP"
-SP.ERR.USER_AGENT="User Agent:"
-SP.ERR.REQUESTED_URI="Requested URI:"
-SP.ERR.REFERRER="Referrer:"
-SP.ERR.TRACE="Trace:"
-SP.ERR.CALL_STACK="Call Stack:"
-SP.ERR.ERROR_ID="Error ID"
-SP.ERR.ERROR_INFO="Error Info"
+SP.ERR.USER_AGENT="User Agent"
+SP.ERR.REQUESTED_URI="Requested URI"
+SP.ERR.REFERRER="Referrer"
+SP.ERR.TRACE="Trace"
+SP.ERR.CALL_STACK="Call Stack"
+SP.ERR.ERROR_ID="Error Id"
+SP.ERR.ERROR_INFO="Error Information"
 SP.ERR.ERROR_DETAILS="Error Details"
-SP.ERR.ERROR_LOG_NOT_DELETED="Could not delete error log. Error: var:[error]"
-SP.ERR.ERROR_LOG_DELETED="Error log has been deleted"
-SP.ERR.NO_ERRORS="Error log is empty"
+SP.ERR.ERROR_LOG_NOT_DELETED="Could not delete error log. Error: var:[error]."
+SP.ERR.ERROR_LOG_DELETED="Error log has been deleted!"
+SP.ERR.NO_ERRORS="Error log is empty."
 
 ;=========
 ; Input filters
@@ -1116,6 +1121,7 @@ SP.EX.SSL_SKIP_BT="No, thanks"
 ; Installed extensions
 SP.EX.INSTALLED="Installed Applications"
 SP.EX.INSTALL_NEW="Install New Application:"
+SP.EX.NOT_APLICABLE="Not applicable/modifiable"
 SP.EX.INSTALL_NEW_BT="Upload File & Install"
 SP.EX.CORE_PLUGIN="Core Application"
 ; Repositories Manager
