--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,8 +19,6 @@
 ; SobiPro 1.1
 ;=========
 
-SP.ERR.ERROR_LINE="At Line:"
-
 SP.ENTRY.HEADER_COUNTER="Counter"
 SP.ENTRY.HEADER_SECTION="Section"
 SP.ENTRY.HEADER_CREATED_AT="Created at"
@@ -415,6 +413,7 @@ SP.TP.DESC="Description"
 SP.ERR.SITE_TITLE="Error Log"
 SP.ERR.VARIABLES="Defined Variables"
 SP.ERR.CALLSTACK="Call Stack"
+SP.ERR.ERROR_LINE="At Line"
 
 ; ACL
 SP.ACL_SELECT_RULE_FIRST="Please select rule to delete from the list!"
