SAM - available application/installing from repository/refreshing list of apps (all cool Ajax based :)

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,8 @@
 ; SobiPro 1.1
 ;=========
 
+SP.EX.DEL_REPO_ERROR="Cannot delete repository definition"
+
 SP.ENTRY.HEADER_COUNTER="Counter"
 SP.ENTRY.HEADER_SECTION="Section"
 SP.ENTRY.HEADER_CREATED_AT="Created at"
