SAM - repository removal. Some security improvements

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1146,7 +1146,7 @@ SP.EX.MAINT_SUPPORT="Support"
 ; SOAP Response/Request
 SP.EX.SOAP_RESP_HEAD="The repository demands the following information"
 SP.EX.SOAP_RESP_SEND_BT="Send"
-SP.EX.SOAP_RESP_REQ="* required"
+SP.EX.SOAP_RESP_REQ="required"
 SP.EX.SOAP_RESP_OPT="optional"
 SP.AMN.APPS_HEAD="Applications"
 SP.AMN.APPS_SECTION_HEAD="Section Applications"
