layout ACL Manager

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -200,7 +200,7 @@ SP.ADD_NEW_ENTRY="Add New Entry"
 SP.AMN.ADD="Add"
 
 ;; Entries
-SP.HEADER_ENTRIES_NAME="Name"
+SP.HEADER_ENTRIES_NAME="Entry Name"
 SP.HEADER_ENTRIES_STATE="State"
 SP.HEADER_ENTRIES_APPROVAL="Approval"
 SP.HEADER_FIELD_AUTHOR="Owner"
@@ -386,7 +386,7 @@ SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
 SP.EXTENSIONS.HEADER_VERSION="Version"
 SP.EX.APP_ENABLED="Application \"%s\" has been enabled."
 SP.EX.APP_DISABLED="Application \"%s\" has been disabled."
-SP.EX.HEADER_NAME="Name"
+SP.EX.HEADER_NAME="Application Name"
 SP.EX.HEADER_TYPE="Type"
 SP.EX.NOT_APPLICABLE="Not applicable: This type of extension cannot be disabled!"
 SP.APPS.LIST_APPS="Applications"
@@ -419,10 +419,11 @@ SP.ERR.ERROR_LINE="At Line"
 
 ; ACL
 SP.ACL_SELECT_RULE_FIRST="Please select rule to delete from the list!"
-SP.ACL_RULE_DELETED="ACL Rule has been deleted."
+SP.ACL_RULE_DELETED="ACL rule has been deleted."
 SP.ACL_PERMISSION_TAB="Permissions"
-SP.ACL_PUBLISHING="Publishing"
-SP.ACL_RULE_SAVED="ACL rule has been saved"
+SP.ACL_PUBLISHING="Validity"
+SP.ACL_RULE_SAVED="ACL rule has been saved."
+SP.ACL_ENABLED="Enabled"
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
@@ -493,7 +494,7 @@ SP.CMS_EXT_INSTALLED="New %s %s has been installed"
 SP.CMS_EXT_NOT_INSTALLED="Cannot install extension"
 SP.CMS_EXT_REMOVED="Extension %s has been removed"
 SP.CMS_EXT_NOT_REMOVED="Cannot remove %s"
-SP.ACL.MSG_STATE_CHANGED="Rule(s) state has been changed"
+SP.ACL.MSG_STATE_CHANGED="Rule(s) state has been changed."
 SP.CMS_SOBIPRO_UPDATE_INSTALLED="SobiPro has been updated to the version %s"
 SP.CATEGORY_CHECKED_OUT="Category is being edited"
 SP.CATEGORY_CHECKED_OUT_BY="This category is being edited by var:[user]"
@@ -612,10 +613,10 @@ SP.ACL.TITLE="Access Control List"
 SP.ACL.JS_MSG_DELETE_ACL_RULE="Are you sure you want to delete this rule?"
 SP.ACL="Access Control List"
 SP.ACL.REG_VISITOR="Regular Visitor (unregistered)"
-SP.ACL.HEADER_RID="ID"
+SP.ACL.HEADER_RID="Id"
 SP.ACL.HEADER_TOGGLE="Toggle"
-SP.ACL.HEADER_ORDER_BY_RID="Order by rule ID "
-SP.ACL.HEADER_NAME="Rule name"
+SP.ACL.HEADER_ORDER_BY_RID="Order by rule Id "
+SP.ACL.HEADER_NAME="Rule Name"
 SP.ACL.HEADER_ORDER_BY_NAME="Order by rule name"
 SP.ACL.HEADER_STATE="State "
 SP.ACL.HEADER_ORDER_BY_STATE="Order by rule state"
@@ -628,23 +629,23 @@ SP.ACL.HEADER_GROUP_COUNT="Number of affected groups"
 SP.ACL.FORM_SITE_TITLE_ADD="Add new ACL rule "
 SP.ACL.STATE_HEAD="State"
 SP.ACL_FORM_SITE_TITLE_EDIT="ACL - Edit Rule &#34;var:[rule]&#34;"
-SP.ACL_FORM_SITE_TITLE_ADD="ACL - Add New Rule"
-SP.PERMISSIONS.ACCESS_*="Access Any"
-SP.PERMISSIONS.ACCESS_VALID="Access Any Valid"
-SP.PERMISSIONS.ADD_OWN="Add Own"
-SP.PERMISSIONS.ADM_FIELDS_EDIT="Edit Admin Fields"
-SP.PERMISSIONS.ADM_FIELDS_SEE="See Admin Fields"
-SP.PERMISSIONS.EDIT_*="Edit Any"
-SP.PERMISSIONS.EDIT_OWN="Edit Own"
-SP.PERMISSIONS.MANAGE_OWN="Manage Own"
-SP.PERMISSIONS.MANAGE_*="Approve Entries"
-SP.PERMISSIONS.PAYMENT_FREE="Skip Payments"
-SP.PERMISSIONS.*_*="All Permisions"
-SP.PERMISSIONS.ACCESS_UNAPPROVED_ANY="See Unapproved Version"
-SP.PERMISSIONS.ACCESS_UNPUBLISHED_ANY="Access Any Unpublished"
-SP.PERMISSIONS.ACCESS_UNPUBLISHED_OWN="Access Own Unpublished"
-SP.PERMISSIONS.PUBLISH_OWN="Publish Own"
-SP.PERMISSIONS.PUBLISH_*="Publish Any"
+SP.ACL_FORM_SITE_TITLE_ADD="ACL - Add new Rule"
+SP.PERMISSIONS.ACCESS_*="access any"
+SP.PERMISSIONS.ACCESS_VALID="access any valid"
+SP.PERMISSIONS.ADD_OWN="add own"
+SP.PERMISSIONS.ADM_FIELDS_EDIT="edit admin fields"
+SP.PERMISSIONS.ADM_FIELDS_SEE="see admin fields"
+SP.PERMISSIONS.EDIT_*="edit any"
+SP.PERMISSIONS.EDIT_OWN="edit own"
+SP.PERMISSIONS.MANAGE_OWN="manage own"
+SP.PERMISSIONS.MANAGE_*="approve any"
+SP.PERMISSIONS.PAYMENT_FREE="skip payments"
+SP.PERMISSIONS.*_*="all permissions"
+SP.PERMISSIONS.ACCESS_UNAPPROVED_ANY="access any unapproved"
+SP.PERMISSIONS.ACCESS_UNPUBLISHED_ANY="access any unpublished"
+SP.PERMISSIONS.ACCESS_UNPUBLISHED_OWN="access own unpublished"
+SP.PERMISSIONS.PUBLISH_OWN="publish own"
+SP.PERMISSIONS.PUBLISH_*="publish any"
 
 ;=========
 ; Category
