Vehicles Data installation removed

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1092,7 +1092,7 @@ SP.EX.CANNOT_CHANGE_STATE_ERR="Cannot change state of the selected application"
 SP.EX.REPO_HAS_BEEN_ADDED="Repository at var:[location] has been added."
 SP.EX.REPO_HAS_BEEN_ADDED_WITH_MSG="Repository at var:[location] has been added. var:[msg]"
 SP.EX.NO_REPOSITORY_SELECTED="No repository has been selected"
-SP.EX.REPOSITORY_DELETED="Repository has been deleted"
+SP.EX.REPOSITORY_DELETED="Repository has been deleted."
 SP.EX.PLUGIN_ALLREADY_INSTALLED="Application &#34;var:[name]&#34; is already installed. Please uninstall it first."
 SP.EX.PAYMENT_METHOD_TYPE="payment method"
 SP.EX.FIELD_TYPE="field"
