--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -106,35 +106,35 @@ COM_SOBIPRO="SobiPro"
 ;=========
 ; Messages
 ;=========
-SP.MSG.OBJ_CHECKED_OUT="var:[type] has been checked out and cannot be edited at the moment"
-SP.MSG.OBJ_CHANGED="var:[type] has been changed"
-SP.MSG.OBJ_DELETED="var:[type] has been deleted"
-SP.MSG.OBJ_SAVED="var:[type] has been saved"
-SP.CAT.IS_CHECKED_OUT="This category is currently being edited by another user"
+SP.MSG.OBJ_CHECKED_OUT="var:[type] has been checked out and cannot be edited at the moment."
+SP.MSG.OBJ_CHANGED="var:[type] has been changed."
+SP.MSG.OBJ_DELETED="var:[type] has been deleted."
+SP.MSG.OBJ_SAVED="var:[type] has been saved."
+SP.CAT.IS_CHECKED_OUT="This category is currently being edited by another user."
 
 ;=========
 ; Entry
 ;=========
-SP.EN.ENTRY_SAVED="Entry has been saved"
-SP.EN.ENTRY_SAVED_NP="Entry has been saved but it is not published at the moment"
-SP.EN.ENTRY_SAVED_NA="Entry has been saved but changes are not approved at the moment"
-SP.EN.FIELD_NOT_FREE_MSG=" 'var:[fieldname]' is a paid field. The price is var:[fee]"
+SP.EN.ENTRY_SAVED="Entry has been saved."
+SP.EN.ENTRY_SAVED_NP="Entry has been saved but it is not published at the moment."
+SP.EN.ENTRY_SAVED_NA="Entry has been saved but changes are not approved at the moment."
+SP.EN.FIELD_NOT_FREE_MSG=" 'var:[fieldname]' is a paid field. The price is var:[fee]."
 SP.EN.SAVE_ENTRY_BT="Save Entry"
 SP.EN.CANCEL_BT="Cancel"
 SP.EN.SELECT_CAT_PATH="Select Category"
 SP.EN.PAYMENT_SAVE_ENTRY_BT="Save and Continue"
 SP.EN.PAYMENT_BACK_BT="Go Back and Edit"
-SP.EN.APPROVED="Entry has been approved"
-SP.EN.PUBLISHED="Entry has been published"
-SP.EN.UNPUBLISHED="Entry has been unpublished"
+SP.EN.APPROVED="Entry has been approved."
+SP.EN.PUBLISHED="Entry has been published."
+SP.EN.UNPUBLISHED="Entry has been unpublished."
 SP.EN.ADD_TITLE="var:[section] - Add New Entry"
 SP.EN.ADD_PATH_TITLE="Add New Entry"
-SP.EN.IS_CHECKED_OUT="This entry is currently being edited by another user"
+SP.EN.IS_CHECKED_OUT="This entry is currently being edited by another user."
 
 ;=========
 ; Fields
 ;=========
-SP.FD.DELETED="Field 'var:[field]' has been deleted"
+SP.FD.DELETED="Field 'var:[field]' has been deleted."
 SP.FD.MAIL_EMAIL_ADDRESS="Email address"
 SP.FD.IMG_DELETE_CURRENT_IMAGE="Delete current image"
 SP.FD.SEARCH_SELECT_LIST=" --- Select var:[name]  --- "
