all screens done :D Yeah

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,10 @@
 ; SobiPro 1.1
 ;=========
 
+SP.STATUS_WARNING="Warning"
+SP.STATUS_ERROR="Error"
+SP.STATUS_SUCCESS="Success"
+
 SP.EX.DEL_REPO_ERROR="Cannot delete repository definition"
 
 SP.ENTRY.HEADER_COUNTER="Counter"
