--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -60,6 +60,7 @@
    (!) jQuery upgraded to version 1.8.2
    (!) jQuery UI updated to version v1.9.2
    (!) Category selector for default Business Directory changed to Category Field
+   (!) No fix MyISAM database type on installation
 
    (#) {entry.url} placeholder doesn't work (Issue #708)
    (#) Typo in text label in Entry Manager
