--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -113,7 +113,7 @@ SP.FMN.ORDER_BY_ISFREE_ASC="Free of charge first"
 SP.FMN.ORDER_BY_ISFREE_DESC="Paid first"
 SP.FMN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.FMN.ORDER_BY_ORDER_DESC="Position descending"
-SP.FMN.STATE_CHANGE_NO_ID="Please select field first."
+SP.FMN.STATE_CHANGE_NO_ID="Please select field(s) from the list first!"
 
 ; Fields
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option Ids are used several times; a random option Id has been generated."
@@ -422,8 +422,8 @@ SP.ERR.CALLSTACK="Call Stack"
 SP.ERR.ERROR_LINE="At Line"
 
 ; ACL
-SP.ACL_SELECT_RULE_FIRST="Please select rule to delete from the list!"
-SP.ACL_RULE_DELETED="ACL rule has been deleted."
+SP.ACL_SELECT_RULE_FIRST="Please select rule(s) from the list first!"
+SP.ACL_RULE_DELETED="ACL rule(s) has/have been deleted."
 SP.ACL_PERMISSION_TAB="Permissions"
 SP.ACL_PUBLISHING="Validity"
 SP.ACL_RULE_SAVED="ACL rule has been saved."
@@ -818,7 +818,7 @@ SP.SECTIONS.HEADER_ORDER_BY_STATE="Order by State"
 SP.SECTIONS.HEADER_CATEGORIES_COUNTER="Categories: "
 SP.SECTIONS.HEADER_ENTRIES_COUNTER="Entries: "
 SP.MSG.CACHE_CLEANED="Cache cleaned"
-SP.MSG.ALL_CHANGES_SAVED="All changes saved"
+SP.MSG.ALL_CHANGES_SAVED="All changes saved."
 SP.SEC.CFG.BASIC_SETTINGS="Basic Settings"
 SP.SEC.CFG.CLISTING_SETTINGS="Categories Listing Settings"
 SP.SEC.CFG.ELISTING_SETTINGS="Entries Listing Settings"
@@ -926,7 +926,7 @@ SP.FLR.FILTER_CORE_NE="Core filters are not editable"
 ;=========
 ; Requirements
 ;=========
-SP.REQ.CHECKING_REQUIREMENTS="Please wait, checking requirements ..."
+SP.REQ.CHECKING_REQUIREMENTS="Please wait, checking requirements ... "
 SP.REQ.NEXT_BT="Next >>"
 SP.REQ.DOWNLOAD_BT="Download Systemcheck File"
 SP.REQ.CHECK_AGAIN_BT="Check Again"
@@ -1043,7 +1043,7 @@ SP.REQ.CMS_ENCODING_OK="Using the recommended encoding/charset var:[encoding]"
 SP.REQ.CMS_FTP_NOK="It is not recommended to use the FTP-Layer"
 SP.REQ.CMS_FTP_OK="FTP Layer is disabled"
 SP.REQ.WEB_SERVER_VERSION_NAME="Name and Version"
-SP.REQ.TIDY_NOT_AVAILABLE="Tidy - HTML clean and repair utility is not available. It's not a tragedy but it would be helpful to have it"
+SP.REQ.TIDY_NOT_AVAILABLE="Tidy - HTML clean and repair utility is not available. It's not a tragedy but it would be helpful to have it."
 SP.REQ.TIDY_AVAILABLE="Tidy - HTML clean and repair utility available"
 SP.REQ.TIDY="Tidy HTML"
 
@@ -1202,7 +1202,7 @@ SP.FM.RANGE_LIST_OPT="Range Search"
 SP.FM.FIELD_FEE="Field Fee"
 SP.FM.FIELD_LABEL="Field Label"
 SP.FM.ALIAS="Alias"
-SP.FM.FIELD_CLONED="Field has been duplicated. You are currently editing the newly created field"
+SP.FM.FIELD_CLONED="Field has been duplicated. You are currently editing the newly created field."
 SP.FM.NOTICES="Notices"
 SP.FM.NO_FILTER="No Filter"
 SP.FM.DESCRIPTION="Description"
