--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -17,9 +17,8 @@
 
 
 SP.JS_SELECT_CATEGORY="Select category"
-SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select section first"
-SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
-SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
+SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select section first."
+SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section."
 
 ;=========
 ; SobiPro 1.0 RC4
@@ -37,7 +36,7 @@ SP.JS_CLONE_TEMPL="Please enter a new name for the new template"
 SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
 SP.JS_RED_HIGHLIGHTED_FIELD="Red highlighted field"
 SP.JS_CONNECTION_TIMED_OUT="Connection timed out."
-SP.JS_DONE="Done"
+SP.JS_DONE="Done!"
 SP.JS_REQUIREMENT_ERR="Really sorry, but your server does not meet the minimum requirements to use the SobiPro component.{newline}Please view the SobiPro documentation to see what may need to be done to update your server or simply uninstall this component."
 SP.JS_REQUIREMENT_WARN="It seems that your server covers the minimum requirements to use SobiPro component.{newline}However there were some warnings. Please read the list below carefully before you proceed."
 SP.JS_REQUIREMENT_WORKING_MSG="Wait please ... %d processes are still running"
