Extension Installer layout

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,16 +19,6 @@
 ; SobiPro 1.1
 ;=========
 
-SP.STATUS_WARNING="Warning"
-SP.STATUS_ERROR="Error"
-SP.STATUS_SUCCESS="Success"
-
-SP.EX.DEL_REPO_ERROR="Cannot delete repository definition"
-
-SP.ENTRY.HEADER_COUNTER="Counter"
-SP.ENTRY.HEADER_SECTION="Section"
-SP.ENTRY.HEADER_CREATED_AT="Created at"
-
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
@@ -47,6 +37,9 @@ SP.PN.GO="Go!"
 SP.LISTING_LIMIT="Page Limit"
 SP.CLOSE="Close"
 SP.CLOSE_X="×"
+SP.STATUS_WARNING="Warning"
+SP.STATUS_ERROR="Error"
+SP.STATUS_SUCCESS="Success"
 
 ; Toolbar
 SP.TB.SAVE_ONLY="Save"
@@ -75,6 +68,7 @@ SP.TB.GLOBAL_CONFIG="System Settings"
 SP.TB.ACL="Access Control List"
 SP.TB.SAM="Application Manager"
 SP.TB.TEMPLATE="Template Manager"
+SP.TB.REMOVE="Remove"
 
 ; CPanel
 SP.CPANEL_SYSTEM_STATUS="SobiPro System Status"
@@ -87,6 +81,9 @@ SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
 SP.CPANEL_ISSUES_TYPE="Level"
 SP.CPANEL_ISSUES_SECTION="Section"
 SP.CPANEL_ISSUES_MESSAGE="Message"
+SP.ENTRY.HEADER_COUNTER="Counter"
+SP.ENTRY.HEADER_SECTION="Section"
+SP.ENTRY.HEADER_CREATED_AT="Created at"
 
 ; Fields Manager
 SP.HEADER_FIELD_NAME="Field Name"
@@ -386,13 +383,13 @@ SP.GBN.CFG.PAYMENTS="Payment"
 SP.GBN.CFG.PMN_VAT="Tax / VAT"
 SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
 
-; Applications
+; Applications Installer/Repository
 SP.EXTENSIONS.HEADER_VERSION="Version"
 SP.EX.APP_ENABLED="Application \"%s\" has been enabled."
 SP.EX.APP_DISABLED="Application \"%s\" has been disabled."
 SP.EX.HEADER_NAME="Application Name"
 SP.EX.HEADER_TYPE="Type"
-SP.EX.NOT_APPLICABLE="Not applicable: This type of extension cannot be disabled!"
+SP.EX.NOT_APPLICABLE="Not applicable: This application type cannot be disabled!"
 SP.APPS.LIST_APPS="Applications"
 SP.APPS.LIST_FIELDS="Fields"
 SP.APPS.LIST_TEMPLATES="Templates"
@@ -400,9 +397,13 @@ SP.APPS.LIST_LANGUAGES="Languages"
 SP.APPS.LIST_OTHERS="Others"
 SP.EX.LAST_UPDATED="Last update: %s"
 SP.EX.INSTALL_APP="Install"
-SP.EX.REINSTALL_APP="Re-Install"
+SP.EX.REINSTALL_APP="Re-install"
 SP.EX.UPDATE_APP="Update"
 SP.PROGRESS_WORKING="Working ..."
+SP.CMSEX_INSTALLED="Extension (%s) \"%s\" has been installed."
+SP.EX.INSTALL="Install Application:"
+SP.EX.DEL_REPO_ERROR="Cannot delete repository definition."
+
 
 ; Template
 SP.TP.VER="Version"
@@ -463,11 +464,11 @@ SP.CAT.ENTRIES_LIST_FILTER="Filter: "
 SP.TB.SAVE_AS="Save As"
 SP.TB.DELETE_FILE="Delete File"
 SP.EX.BRWOSE_NOT_INSTALLED="Not Installed"
-SP.EX.BRWOSE_NOT_INSTALLED_EXPL="This Application is not installed."
+SP.EX.BRWOSE_NOT_INSTALLED_EXPL="Application is not installed."
 SP.EX.BRWOSE_INSTALLED="Installed"
-SP.EX.BRWOSE_INSTALLED_EXPL="This Application is installed."
+SP.EX.BRWOSE_INSTALLED_EXPL="Application is installed."
 SP.EX.BRWOSE_INSTALLED_UPD="Not up to date"
-SP.EX.BRWOSE_INSTALLED_UPD_EXPL="This Application ist installed, but a newer version is available."
+SP.EX.BRWOSE_INSTALLED_UPD_EXPL="Application is installed, but a newer version is available."
 SP.EXTENSIONS.HEADER_STATE="State"
 SP.FM.STATE_CHANGED="State of field var:[fid] has been changed. "
 SP.FM.STATE_NOT_CHANGED="State of field var:[fid] cannot be changed. "
@@ -490,16 +491,16 @@ SP.GB.CFG.COMPRESS_JS_FILES="JavaScript Files Compression"
 ;=========
 ; SobiPro 1.0 RC2
 ;=========
-SP.LANG_INSTALL_NO_CORE="The language package has been installed but there is no Joomla! core package for %s"
+SP.LANG_INSTALL_NO_CORE="The language package has been installed but there is no Joomla! core package for \"%s\"."
 SP.LANG_INSTALLED="New language package '%s' has been installed"
 SP.EX.MODULE_TYPE="Joomla! Module"
 SP.EX.LANGUAGE_TYPE="Language"
-SP.CMS_EXT_INSTALLED="New %s %s has been installed"
-SP.CMS_EXT_NOT_INSTALLED="Cannot install extension"
-SP.CMS_EXT_REMOVED="Extension %s has been removed"
-SP.CMS_EXT_NOT_REMOVED="Cannot remove %s"
+SP.CMS_EXT_INSTALLED="Extension (%s) \"%s\" has been installed."
+SP.CMS_EXT_NOT_INSTALLED="Cannot install extension."
+SP.CMS_EXT_REMOVED="Extension \"%s\" has been removed."
+SP.CMS_EXT_NOT_REMOVED="Cannot remove extension \"%s\"."
 SP.ACL.MSG_STATE_CHANGED="Rule(s) state has been changed."
-SP.CMS_SOBIPRO_UPDATE_INSTALLED="SobiPro has been updated to the version %s"
+SP.CMS_SOBIPRO_UPDATE_INSTALLED="SobiPro has been updated to the version %s."
 SP.CATEGORY_CHECKED_OUT="Category is being edited"
 SP.CATEGORY_CHECKED_OUT_BY="This category is being edited by var:[user]"
 SP.SEC.CFG.PARSE_TPL_CONTENT="Parse Template Output"
@@ -723,10 +724,10 @@ SP.ENTRY.APPROVE_EXPL="Approve selected entries"
 SP.ENTRY.APPROVAL_HEAD="Approval"
 SP.ENTRY.HEADER_CREATEDTIME=""
 SP.ENTRY.HEADER_ORDER_BY_CREATEDTIME="Order by creation date"
-SP.ENTRY.HEADER_ORDER_BY_E_SID="Order by ID"
+SP.ENTRY.HEADER_ORDER_BY_E_SID="Order by Id"
 SP.ENTRY.HEADER_ORDER_BY_NAME="Order by name"
 SP.ENTRY.HEADER_ORDER_BY_ORDER="Order by position"
-SP.ENTRY.HEADER_ORDER_BY_OWNER="Order by author ID"
+SP.ENTRY.HEADER_ORDER_BY_OWNER="Order by author Id"
 SP.ENTRY.HEADER_ORDER_BY_STATE="Order by state"
 SP.ENTRY.HEADER_ORDER_BY_VALIDSINCE="Order by publish date"
 SP.ENTRY.HEADER_ORDER_BY_VALIDUNTIL="Order by unpublish date"
@@ -809,8 +810,8 @@ SP.SEC.ADD_SECTION_NAME="Section Name"
 SP.SEC.ADD_SECTION_ALIAS="Section Alias"
 SP.SEC.ADD_DESC="Description"
 SP.SECTION.STATE_HEAD="State"
-SP.SECTIONS.HEADER_ID="ID"
-SP.SECTIONS.HEADER_ORDER_BY_ID="Order by ID"
+SP.SECTIONS.HEADER_ID="Id"
+SP.SECTIONS.HEADER_ORDER_BY_ID="Order by Id"
 SP.SECTIONS.HEADER_NAME="Section Name"
 SP.SECTIONS.HEADER_ORDER_BY_NAME="Order by Section Name"
 SP.SECTIONS.HEADER_STATE="State"
@@ -1090,7 +1091,7 @@ SP.EX.FETCHED_LIST_FROM_REPOSITORY="Fetched list with var:[count] applications f
 SP.EX.FETCHED_D_EXTENSIONS="Fetched var:[count] applications"
 SP.EX.EXT_LIST_UPDATED="Application list has been updated"
 SP.EX.MSG_UPDATE_FIRST="The list of available applications is empty at the moment. Hit the &#34;Fetch Updates&#34; button to refresh the list."
-SP.EX.SELECT_TO_DELETE_ERR="Please make a selection from the list to delete"
+SP.EX.SELECT_TO_DELETE_ERR="Please select an application to delete from the list first!"
 SP.EX.CANNOT_LOAD_PLUGIN_DEF_ERR="Cannot load application definition file - aborted"
 SP.EX.CANNOT_CHANGE_STATE_ERR="Cannot change state of the selected application"
 SP.EX.REPO_HAS_BEEN_ADDED="Repository at var:[location] has been added."
@@ -1103,8 +1104,8 @@ SP.EX.FIELD_TYPE="field"
 SP.EX.PLUGIN_TYPE="application"
 SP.EX.APPLICATION_TYPE="application"
 SP.EX.GLOBAL_APPLICATION_TYPE="global application"
-SP.EX.EXTENSION_HAS_BEEN_INSTALLED="New var:[type] &#34;var:[name]&#34; has been installed"
-SP.EX.EXTENSION_HAS_BEEN_REMOVED="var:[type] &#34;var:[name]&#34; has been removed"
+SP.EX.EXTENSION_HAS_BEEN_INSTALLED="New var:[type] &#34;var:[name]&#34; has been installed."
+SP.EX.EXTENSION_HAS_BEEN_REMOVED="var:[type] &#34;var:[name]&#34; has been removed."
 SP.EXTENSIONS.HEADER_CHECKBOX=""
 SP.EXTENSIONS.HEADER_PID="Id"
 SP.EXTENSIONS.HEADER_NAME="Application Name"
@@ -1136,7 +1137,7 @@ SP.EX.SSL_CONFIRM_BT="Yes, these data are correct. Add this repository please"
 SP.EX.SSL_SKIP_BT="No, thanks"
 ; Installed extensions
 SP.EX.INSTALLED="Installed Applications"
-SP.EX.INSTALL_NEW="Install New Application:"
+SP.EX.INSTALL_NEW="Install new Application:"
 SP.EX.NOT_APLICABLE="Not applicable/modifiable"
 SP.EX.INSTALL_NEW_BT="Upload File & Install"
 SP.EX.CORE_PLUGIN="Core Application"
